Fix positioning of search bar on mobile

--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -272,7 +272,7 @@ header {
 
     $font-size: 1.5rem;
     .search form input {
-      width: 9em;
+      width: 8.4em;
       font-size: $font-size;
     }
 
